--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>zoon newtab</title>
+    <title>Zoom NewTab</title>
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://ituyama.com/zoom-newtab/">Zoom-Newtab</a>
+        <a class="navbar-brand" href="http://ituyama.com/zoom-newtab/">Zoom-NewTab</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,6 +19,9 @@
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="https://twitter.com/PM80437319">作者のTwitter</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="https://github.com/ituyama/zoom-newtab">GitHub</a>
               </li>
         
             </ul>
